website/public/styles/core.css
* {
	box-sizing:border-box;
}

html {
	height: 100%;
}

body {
	font-family: 'Open Sans', sans-serif;
	background:#eaeaea;
	color:#444;
	font-size:15px;

	display: -webkit-box;
	display: -moz-box;
	display: -ms-flexbox;
	display: -webkit-flex;
	display: flex;

	-webkit-flex-direction:column;
	-moz-flex-direction:column;
	-ms-flex-direction:column;
	flex-direction:column;

	height:100%;
	margin:0;
}

input, textarea, select {
	-webkit-appearance: none;
	border-radius:0;
}

#app {
	-webkit-flex: 1;
	-moz-flex: 1;
	-ms-flex: 1;
	flex: 1;

	-webkit-box-orient: vertical;
    /* Prefixed new syntax: */
    -webkit-flex-direction: column;
    /* (Same syntax for weird IE tweener) */
    -ms-flex-direction: column;
    /* unprefixed new syntax */
    flex-direction: column;

    /* [3] */
    min-height: 100vh;

    /* Pepperidge Farm remembers. */
    -webkit-box-flex: 1 0 auto;
    /* IE10, ugh */
    -ms-flex: 1 0 auto;
    /* Unprefixed */
    flex: 1 0 auto;
    /* prefixed webkit syntax */
    -webkit-flex: 1 0 auto;
}

#app,
#app a,
#app div, 
#app form, 
#app button {
	display: -webkit-box;
	display: -moz-box;
	display: -ms-flexbox;
	display: -webkit-flex;
	display: flex;
	
	-webkit-flex-direction:column;
	-moz-flex-direction:column;
	-ms-flex-direction:column;
	flex-direction:column;
	
	-webkit-align-items: stretch;
	-moz-align-items: stretch;
	-ms-align-items: stretch;
	align-items: stretch;
	
	-webkit-flex-shrink: 0;
	-moz-flex-shrink: 0;
	-ms-flex-shrink: 0;
	flex-shrink: 0;
	
	-webkit-align-content: flex-start;
	-moz-align-content: flex-start;
	-ms-align-content: flex-start;
	align-content: flex-start;

	box-sizing: border-box;
	position: relative;

	border: 0 solid black;
	margin: 0;
	padding: 0;

	color:#444;
}

#app img, 
#app span {
	display:inline-block;

	box-sizing: border-box;
	position: relative;
	
	border: 0 solid black;
	margin: 0;
	padding: 0;
	
	color:#444;
}

#app a > span, 
#app span > a, 
#app span > span {
	display:inline;
	color:inherit;
}

#app input,
#app select,
#app textarea {
	outline:0;
}

#app input[type=search] {
	box-sizing: border-box;
}

